.provarCaches/00Df2000001KKNJEA4/objects/Incapfs__Error__c.object
<CustomObject>
    <fields>
        <fullName>Incapfs__Error_Message__c</fullName>
        <label>Error Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Incapfs__SOQL__c</fullName>
        <label>SOQL</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Incapfs__Stack_Trace__c</fullName>
        <label>Stack Trace</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Error</label>
    <nameField>
        <label>Error Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Errors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>